deleted useless information from the page about-me, changed styles on the main page which fixed bug with text overflowing on the menu, changed styles on the contacts page

--- a/assets/css/styles-contacts.css
+++ b/assets/css/styles-contacts.css
@@ -181,10 +181,8 @@ body {
   }
 }
 .main {
-  height: calc(100vh - 81px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 100%;
+  min-height: unset;
 }
 
 .contacts {
