--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -180,10 +180,6 @@ body {
     color: #8a8a8a;
   }
 }
-.main {
-  height: calc(100vh - 81px);
-}
-
 .welcome {
   max-width: 100%;
   text-align: center;
