--- a/assets/scss/main/_main-desktop.scss
+++ b/assets/scss/main/_main-desktop.scss
@@ -1,7 +1,3 @@
-.main {
-    height: calc(100vh - 81px);
-}
-
 .welcome {
     max-width: 100%;
 
